--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <h1>Welcome</h1>
-    <h2>Nugman Umbi</h2>
+    <h2>Iqbal Love Laila</h2>
+    <h3>Irfan Love Shahnaz</h3>
 </body>
 </html>
 <Style>
-    body{
-        background: black;
-        padding: 0;
-    }
+
 </Style>
